--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-leap-day
+title: Proyectos del módulo PMDM
+description: Bienvenidos a la página de proyectos del módulo PMDM del IES Ribera del Tajo
